k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reminders-app
  labels:
    app.kubernetes.io/part-of: reminders-app
